# Mastering-ROS-for-Robotics-Programming-Third-edition

./: README.md
Chapter10/cv_bridge_tutorial_pkg/: CMakeLists.txt  package.xml
Chapter10/cv_bridge_tutorial_pkg/launch/: demo.launch
Chapter10/cv_bridge_tutorial_pkg/src/: Receiver.cpp  Sender.cpp  sample_cv_bridge_node.cpp
Chapter10/fake_laser_pkg/: CMakeLists.txt  package.xml
Chapter10/fake_laser_pkg/launch/: start_laser.launch
Chapter10/pcl_ros_tutorial/: CMakeLists.txt  package.xml
Chapter10/pcl_ros_tutorial/launch/: crop_pcl.launch  voxel_pcl.launch
Chapter10/pcl_ros_tutorial/src/: pcl_filter.cpp  pcl_pub.cpp  pcl_publisher.cpp  pcl_sub.cpp
Chapter12/gazebo_ros_hello_world/: CMakeLists.txt  package.xml
Chapter12/gazebo_ros_hello_world/include/gazebo_ros_hello_world/: gazebo_ros_template.h
Chapter12/gazebo_ros_hello_world/launch/: gazebo_hello.launch
Chapter12/gazebo_ros_hello_world/src/: GazeboRosHelloWorld.cpp
Chapter12/gazebo_ros_hello_world/world/: model_push.world
Chapter12/nodelet_hello_world/src/: hello_world.cpp
Chapter12/plugin_calculator/: calculator_plugins.xml  package.xml
Chapter12/plugin_calculator/include/pluginlib_calculator/: calculator_base.h  calculator_plugins.h
Chapter12/plugin_calculator/src/: calculator_loader.cpp  calculator_plugins.cpp
Chapter13/my_controller/src/: my_controller.cpp
Chapter13/my_controller/urdf/: seven_dof_arm.xacro
Chapter14/ros_matlab_test/: plot_laser.m  publisher.slxc  ros_rate.m  subscriber.slxc  talker.m  turtlebot_orientation_ctrl.mdl  turtlebot_orientation_ctrl.slxc  vfh_obstacle_avoidance.m
Chapter14/ros_matlab_test/slprj/_cgxe/publisher/: publisher_Cache.mat
Chapter14/ros_matlab_test/slprj/_cgxe/turtlebot_orientation_ctrl/: turtlebot_orientation_ctrl_Cache.mat
Chapter14/ros_matlab_test/slprj/_cgxe/turtlebot_orientation_ctrl_v2/: turtlebot_orientation_ctrl_v2_Cache.mat
Chapter14/ros_matlab_test/slprj/_jitprj/: IiGM0BlqIQck5JiUTdGYNE.l  IiGM0BlqIQck5JiUTdGYNE.mat  LxI484ltTUcwGJCS82fzcD.l  LxI484ltTUcwGJCS82fzcD.mat  jitEngineAccessInfo.mat  sCgp2w0vSpF7ojf8zLJFPOB.l  sCgp2w0vSpF7ojf8zLJFPOB.mat  suHmaA8z4i3msL9s9dFefWG.l  suHmaA8z4i3msL9s9dFefWG.mat
Chapter14/ros_matlab_test/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sCgp2w0vSpF7ojf8zLJFPOB.mat  suHmaA8z4i3msL9s9dFefWG.mat
Chapter14/ros_matlab_test/slprj/_sfprj/precompile/: autoInferAccessInfo.mat  thTIKuVYuTP8EFT8vHff3B.mat
Chapter14/ros_matlab_test/slprj/_sfprj/turtlebot_orientation_ctrl/: amsi_serial.mat
Chapter2/mastering_ros_demo_pkg/: CMakeLists.txt  package.xml
Chapter2/mastering_ros_demo_pkg/launch/: demo_topic.launch
Chapter2/mastering_ros_demo_pkg/msg/: demo_msg.msg
Chapter2/mastering_ros_demo_pkg/src/: demo_action_client.cpp  demo_action_server.cpp  demo_msg_publisher.cpp  demo_msg_subscriber.cpp  demo_service_client.cpp  demo_service_server.cpp  demo_topic_publisher.cpp  demo_topic_subscriber.cpp
Chapter3/mastering_ros_robot_description_pkg/: CMakeLists.txt  package.xml
Chapter3/mastering_ros_robot_description_pkg/launch/: view_arm.launch  view_demo.launch  view_mobile_robot.launch  view_pan_tilt_urdf.launch  view_pan_tilt_xacro.launch
Chapter3/mastering_ros_robot_description_pkg/meshes/sensors/xtion_pro_live/: xtion_pro_live.stl
Chapter3/mastering_ros_robot_description_pkg/urdf/: diff_wheeled_robot.urdf  diff_wheeled_robot.xacro  diff_wheeled_robot_with_laser.xacro  pan_tilt_generated.urdf  seven_dof_arm.urdf  seven_dof_arm.xacro  seven_dof_arm_moveit.urdf  seven_dof_arm_with_rgbd.xacro  wheel.urdf.xacro
Chapter3/mastering_ros_robot_description_pkg/urdf/sensors/: xtion_pro_live.urdf.xacro
Chapter4/seven_dof_arm_gazebo/: CMakeLists.txt  package.xml
Chapter4/seven_dof_arm_gazebo/config/: seven_dof_arm_gazebo_control.yaml  trajectory_control.yaml
Chapter4/seven_dof_arm_gazebo/launch/: seven_dof_arm_bringup_moveit.launch  seven_dof_arm_bringup_obstacle_moveit.launch  seven_dof_arm_gazebo_control.launch  seven_dof_arm_obstacle_world.launch  seven_dof_arm_with_rgbd_world.launch  seven_dof_arm_world.launch
Chapter4/seven_dof_arm_gazebo/worlds/: obstacle.world
Chapter5/csim_demo_pkg/: CMakeLists.txt  package.xml
Chapter5/csim_demo_pkg/scene/: demo_publisher_subscriber.ttt  plugin_publisher_subscriber.ttt  seven_dof_arm.ttt
Chapter5/csim_demo_pkg/urdf/: seven_dof_arm.xacro
Chapter5/webots_demo_pkg/: CMakeLists.txt  package.xml
Chapter5/webots_demo_pkg/launch/: e_puck_manager.launch
Chapter5/webots_demo_pkg/src/: e_puck_manager.cpp
Chapter6/diff_wheeled_robot_control/scripts/: diff_wheeled_robot_key
Chapter6/diff_wheeled_robot_gazebo/launch/: diff_wheeled_gazebo_full.launch  diff_wheeled_gazebo_with_laser.launch  gmapping.launch
Chapter6/diff_wheeled_robot_gazebo/param/: global_costmap_params.yaml  local_costmap_params.yaml
Chapter6/seven_dof_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
Chapter6/seven_dof_arm_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  seven_dof_arm.srdf
Chapter6/seven_dof_arm_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  seven_dof_arm_moveit_controller_manager.launch.xml  seven_dof_arm_moveit_sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
Chapter7/seven_dof_arm_test/src/: pick_place.cpp
Chapter8/iris_model/: CMakeLists.txt  package.xml
Chapter8/iris_model/launch/: spawn_iris.launch
Chapter8/iris_model/src/: motor_example.cpp
Chapter8/iris_model/urdf/: iris_base.xacro
Chapter8/px4_ros_ctrl/: CMakeLists.txt  package.xml
Chapter8/px4_ros_ctrl/launch/: px4_ros.launch
Chapter8/px4_ros_ctrl/src/: px4_ctrl_example.cpp
(+34 files in other folders)
