<?xml version="1.0"?>
<package>
  <name>pluginlib_calculator</name>
  <version>0.0.0</version>
  <description>The pluginlib_calculator package</description>


  <maintainer email="lentin@todo.todo">lentin</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<pluginlib_calculator plugin="${prefix}/calculator_plugins.xml" />
  </export>
</package>
